apps/gamal/templates/gamal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamal
spec:
  type: ClusterIP
  selector:
    app: gamal
  ports:
    - port: 80
      targetPort: 80
